<resources>
    <string name="app_name">Quiz App</string>
    <string name="text_box_label">Good Luck</string>
    <string name="name_hint">What is your name?</string>
    <string name="color_hint">State your favorite number?</string>
    <string name="click_button">Start Quiz</string>
    <string name="time">Time: %1$d</string>
    <string name="activity2_name">Second Activity</string>
    <string name="returnValue">Submit Quiz</string>
    <string name="text_box2_label">Name</string>
    <string name="quiz">Quiz!</string>
    <string name="time_left">Time Left: %1$d</string>
    <string name="cornerbox1">cornerBox1</string>
    <string name="long_text">example text</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_d">Answer D</string>
    <string name="sample_question">SAMPLE QUESTION</string>
    <string-array name="textArray">
        <item> Hi Mom! </item>
        <item> Hi Dad! </item>
        <item> Hello </item>
    </string-array>
</resources>